--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مكتبة الكتب</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://images.app.goo.gl/BppRbBEWEHywrRaK8">
 </head>
 <body>
 
